# Decentralized-Cryptocurrency-Wallet-System

./: README.md
backend/: .env  Cargo.toml  README.md  run.sh
backend/src/: blockchain.rs  crypto.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs
backend/src/handlers/: auth.rs  blockchain.rs  mod.rs  transactions.rs  wallet.rs
frontend/: README.md  index.html  package-lock.json  package.json  run.sh
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: BlockExplorer.jsx  Dashboard.jsx  Login.jsx  Register.jsx  SendMoney.jsx  TransactionHistory.jsx
frontend/src/styles/: App.css  Auth.css  BlockExplorer.css  Dashboard.css  History.css  Navbar.css  SendMoney.css
