[package]
name = "crypto-wallet-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.6"
bson = { version = "0.4", features = ["serde_support"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
cors = "0.1"
thiserror = "1.0"
lazy_static = "1.4"

[[bin]]
name = "crypto-wallet"
path = "src/main.rs"
